--- a/styles/styles.css
+++ b/styles/styles.css
@@ -471,7 +471,7 @@ section {
 /*Timeline*/
 .timeline {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 2rem; 
 }
 
@@ -513,21 +513,23 @@ section {
   font-weight: 500;
 }
 .timeline .timeline-item h5 {
-  padding: 1rem 0;
+  padding: 0 0;
   text-transform: uppercase;
-  font-size: 1.1rem;
+  font-size:medium;
   font-weight: 500;
+  height: 4rem;
 }
 .timeline .timeline-item h5 span {
   color: var(--color-grey-2);
   font-weight: 400;
-  font-size: 0.8rem;
+  font-size: smaller;
+  
 }
 
 .timeline .timeline-item p {
   color: var(--color-grey-2);
   padding: 0.5em;
-  font-size: small;
+  font-size: smaller;
   line-height: 1.1rem;
 }
 
@@ -547,7 +549,7 @@ section {
 
 /* Zoom effect */
 .timeline .timeline-item img:hover {
-  transform: scale(1.1);
+  transform: scale(0.95);
   -webkit-animation: flash 2s;
 	animation: flash 2s;
 }
@@ -662,7 +664,7 @@ section {
 
 .blogs {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 0.6rem;
   margin-top: 2rem;
 }
@@ -737,11 +739,11 @@ section {
 .contact-content-con .left-contact p {
   margin: 1rem 0;
   line-height: 2rem;
-  font-size: small;
+  font-size: smaller;
 }
 
 .left-contact span {
-  font-size: small;
+  font-size: smaller;
   text-transform: uppercase;
 }
 
