--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1287,11 +1287,11 @@ section {
 
 
   .contact-content-con {
-    flex-direction: column;
+    flex-direction: flex;
   }
   .contact-content-con .right-contact {
     margin-left: 0;
-    margin-top: 2.5rem;
+    margin-top: 0;
   }
 
   .contact-content-con .right-contact .i-c-2 {
@@ -1300,24 +1300,23 @@ section {
 
   .contact-content-con .right-contact .i-c-2 :last-child {
     margin-left: 0;
-    margin-top: 1.5rem;
+    margin-top: 0;
   }
 
   .contact-content-con .right-contact {
-    margin-bottom: 0rem;
+    margin-bottom: 2rem;
+    padding-bottom: 8rem;
+  }
+
+  #contact.container.contact.active {
+    height: 0vh;
   }
 
   .main-title h2 .bg-text {
     font-size: 5.5rem;
   }
 
-  .imagePhone {
-    display: none;
-  }
-
-  .flip-card {
-    display: none;
-  }
+  
 
   .about-container {
     grid-template-columns: repeat(1, 1fr);
@@ -1349,8 +1348,23 @@ section {
 
   .contact-content-con {
     padding-bottom: 0%;
+    padding-top: 0;
   }
 
+  .contact-item {
+    flex-direction: column;
+    margin: 1rem 0;
+  }
+  .contact-item p {
+    font-size: 15px;
+    color: var(--color-grey-2);
+  }
+  .contact-item span {
+    font-size: 15px;
+  }
+  .contact-item .icon {
+    grid-template-columns: 25px 1fr;
+  }
   
 }
 @media screen and (max-width: 1250px) {
