--- a/styles/styles.css
+++ b/styles/styles.css
@@ -736,6 +736,7 @@ section {
 .contact-content-con .left-contact {
   flex: 2;
 }
+
 .contact-content-con .left-contact h4 {
   margin-top: 1rem;
   font-size: 1.5rem;
@@ -1314,6 +1315,11 @@ section {
 
   .main-title h2 .bg-text {
     font-size: 5.5rem;
+  }
+
+  .left-contact {
+    padding-top: 2rem;
+    margin-right: -2rem;
   }
 
   
