--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1225,6 +1225,11 @@ section {
     margin-left: 0;
     margin-top: 2.5rem;
   }
+  .contact-content-con .left-contact {
+    margin-left: 4rem;
+    margin-top: 2.5rem;
+    
+  }
 
   .contact-content-con .right-contact .i-c-2 {
     flex-direction: column;
@@ -1238,6 +1243,8 @@ section {
   .contact-content-con .right-contact {
     margin-bottom: 6rem;
   }
+
+  
 
   .contact-item {
     flex-direction: column;
@@ -1304,10 +1311,7 @@ section {
     margin-top: 0;
   }
 
-  .contact-content-con .right-contact {
-    margin-bottom: 2rem;
-    padding-bottom: 8rem;
-  }
+  
 
   #contact.container.contact.active {
     height: 0vh;
