--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1219,17 +1219,15 @@ section {
 
   .contact-content-con {
     flex-direction: column;
-    
+    align-items: center;
+    margin-top: 2.5rem;
   }
+
   .contact-content-con .right-contact {
     margin-left: 0;
     margin-top: 2.5rem;
   }
-  .contact-content-con .left-contact {
-    margin-left: 4rem;
-    margin-top: 2.5rem;
-    
-  }
+  
 
   .contact-content-con .right-contact .i-c-2 {
     flex-direction: column;
@@ -1377,6 +1375,7 @@ section {
   }
   
 }
+
 @media screen and (max-width: 1250px) {
   .blogs {
     grid-template-columns: repeat(4, 1fr);
@@ -1527,7 +1526,7 @@ section {
   }
 
   
-  
+  /* PROJEKTIT */
   .portfolios {
     grid-template-columns: repeat(1, 1fr);
     padding-bottom: 6rem;
