--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,10 +55,46 @@ body {
   height: 100%; 
 }
 
-/* etusivun tekstin animaatio kokonaisuus */
+/* etusivun tähtianimaatio */
+.star-animation {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* Estää animaation vaikuttamisen muihin elementteihin */
+  z-index: -1; /* Asetetaan taustalle */
+}
+
+.star-animation .star {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background: white;
+  border-radius: 50%;
+  animation: moveUp linear infinite;
+}
+
+@keyframes moveUp {
+  0% {
+    transform: translateY(100vh);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-10px);
+    opacity: 0;
+  }
+}
+
+.content {
+  padding: 20px;
+}
 
 
-
+/* TEKSTI ANIMAATIO */
 #animatedText {
   text-align: center;
 }
