--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1311,6 +1311,13 @@ section {
     margin-top: 1rem; 
   }
 
+  #image {
+    background: transparent;
+    width: 100%;
+    height: 100vh;
+    margin-left: 0;
+    
+  }
   
   .timeline {
     display: grid;
@@ -1587,7 +1594,7 @@ section {
 
   
   .left-header .image {
-    width: 100% !important;
+    width: 90% !important;
     margin: 0 auto !important;
   }
 
