--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1149,7 +1149,11 @@ section {
 
   #image {
     background: transparent;
-    height: 58vh;
+    height: 35vh;
+  }
+
+  .left-header {
+    margin-bottom: -25%;
   }
 
   .header-content {
