--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
 
 * {
@@ -190,7 +190,7 @@ section {
 
 /* ETUSIVUN NIMI TYYLI */
 .name {
-  font-family: "Just Another Hand";
+  font-family: "Oswald", serif;
   font-weight: 400;
   font-style: normal;
  
@@ -251,16 +251,19 @@ section {
   border: 2px solid;
   border-color: #ffffff;
 }
+
 .controls .control i {
   font-size: 1.2rem;
   color: var(--color-grey-2);
   pointer-events: none;
+  
 }
 
 .control:hover {
   scale: 0.85;
   transition: ease-in-out;
   background-color: var(--color-secondary);
+  
 }
 
 .controls .active-btn {
@@ -270,6 +273,7 @@ section {
 }
 .controls .active-btn i {
   color: var(--color-white);
+  
 }
 
 
@@ -315,6 +319,7 @@ section {
   border: 2px solid;
   border-color: #ffffff;
 }
+
 .theme-btn:active {
   transform: translateY(-15px);
   
