--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
 
 :root {
   --color-primary: #000000;
-  --color-secondary: #ff3c00;
+  --color-secondary: #00ff00;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
@@ -22,14 +22,14 @@
   --color-grey-4: #454e56;
   --color-grey-5: #1f201f;
   --color-grey-6: #12181b;
-  --color-blue-7: #23acf3;
+  --color-blue-7: #00ff00;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
 }
 
 .light-mode {
   --color-primary: #000000;
-  --color-secondary: #3bf323;
+  --color-secondary: #ff3c00;
   --color-white: #ffffff;
   --color-black: #ffffff;
   --color-grey0: #f8f8f8;
@@ -62,39 +62,49 @@ h2 {
 }
 
 /* etusivun tähtianimaatio */
+
 .star-animation {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  pointer-events: none; /* Estää animaation vaikuttamisen muihin elementteihin */
-  z-index: -1; /* Asetetaan taustalle */
+  pointer-events: none;
+  z-index: -1;
+  perspective: 1000px;
+  background-color: #000; /* Tumma tausta tuo efektin esiin */
 }
 
-
-.star-animation .star {
+.star {
   position: absolute;
-  width: 2px;
-  height: 2px;
-  background: white;
-  border-radius: 50%;
+  font-size: var(--size);
+  color: #ffffff; /* Kirkkaan vihreä */
+  font-weight: bold;
+  text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 15px #009900; /* Loistava efekti */
   animation: moveUp linear infinite;
+  transform-origin: center;
+  white-space: nowrap;
+  opacity: 0;
 }
 
 @keyframes moveUp {
   0% {
-    transform: translateY(100vh);
+    transform: translate3d(0, 100vh, var(--z-depth)) scale(var(--scale)) rotate(var(--rotate));
     opacity: 0;
   }
-  50% {
+  20% {
     opacity: 1;
   }
   100% {
-    transform: translateY(-10px);
+    transform: translate3d(0, -10vh, var(--z-depth)) scale(var(--scale)) rotate(var(--rotate));
     opacity: 0;
   }
 }
+
+
+
+
+
 
 .content {
   padding: 20px;
@@ -337,12 +347,12 @@ section {
 }
 
 .light-mode .theme-btn:hover {
-  background-color: var(--color-orange-7);
+  background-color: var(--color-blue-7);
   scale: 0.8;
 }
 
 .theme-btn:hover {
-  background-color: #3bf323;
+  background-color: #ff3c00;
   scale: 0.8;
   
 }
