--- a/styles/styles.css
+++ b/styles/styles.css
@@ -191,7 +191,8 @@ section {
 #image {
   background: transparent;
   width: 100%;
-  height: 100vh;
+  height: 80vh;
+  margin-bottom: -13rem;
 }
 
 
