--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 
 * {
@@ -56,8 +56,9 @@ body {
 }
 
 h2 {
-  font-family: "Oswald", serif;
+  font-family: "Bebas Neue", serif;
   font-weight: 400;
+  font-style: normal;
   letter-spacing: 0.1cap;
 }
 
@@ -209,8 +210,9 @@ section {
 
 /* ETUSIVUN NIMI TYYLI */
 .name {
-  font-family: "Oswald", serif;
-  font-weight: 200;
+  font-family: "Bebas Neue", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 
