--- a/styles/styles.css
+++ b/styles/styles.css
@@ -193,7 +193,7 @@ section {
   background: transparent;
   width: 100%;
   height: 100vh;
-  
+  margin-left: 0rem;
 }
 
 
@@ -411,6 +411,7 @@ section {
   flex-direction: column;
   justify-content: center;
   padding-right: 5rem;
+  
 }
 .header-content .right-header .name {
   font-size: 3rem;
