--- a/styles/styles.css
+++ b/styles/styles.css
@@ -192,7 +192,7 @@ section {
 #image {
   background: transparent;
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   margin-left: 0rem;
 }
 
@@ -1179,12 +1179,13 @@ section {
   #image {
     background: transparent;
     height: 40vh;
+    
       
   }
 
   .left-header {
     width: 100vw;
-    margin-left: -3.5rem;
+    margin-left: -2.5rem;
     margin-bottom: -3rem;
     
   }
@@ -1365,9 +1366,10 @@ section {
   
   .right-header .name {
     text-align: center;
+    
   }
 
-
+ 
   .contact-content-con {
     flex-direction: flex;
   }
@@ -1467,6 +1469,7 @@ section {
 
   .right-header .name {
     text-align: center;
+    
   }
 
   .portfolios {
@@ -1530,9 +1533,18 @@ section {
 
   .right-header .name {
     text-align: center;
+    margin-right: 2rem;
   }
 
- 
+  .textHead {
+    margin-right: 2rem;
+  }
+
+  #animatedText {
+    margin-right: 2rem;
+  }
+
+  
 
 @media screen and (max-width: 1070px) {
   .about-container {
