--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,10 +87,21 @@ h2 {
   transform-origin: center;
   
   /* Hohtoefekti */
-  text-shadow: 0 0 5px var(--color-secondary), 0 0 10px var(--color-secondary), 0 0 15px var(--color-secondary);
+  text-shadow: 0 -5px 10px var(--color-secondary), 0 5px 10px var(--color-secondary), 0 5px 20px var(--color-secondary);
 
   /* Animaatiot (liike ylös + pyöriminen) */
-  animation: moveUp linear infinite, spin linear infinite;
+  animation: moveUp 5s linear infinite, spin 2s linear infinite;
+}
+
+
+
+@keyframes spin {
+  0% {
+    transform: translate3d(0, 100vh, var(--z-depth)) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(0, -10vh, var(--z-depth)) rotate(var(--spin-dir));
+  }
 }
 
 /* Merkit liikkuvat alhaalta ylös */
@@ -107,6 +118,7 @@ h2 {
     opacity: 0;
   }
 }
+
 
 
 
@@ -202,8 +214,14 @@ section {
   width: 50vw;
   height: 100vh;
   margin-left: 0rem;
+  
 }
 
+/* kuvan väri vihreäksi */
+.color-changed {
+  filter: hue-rotate(120deg); /* Muuttaa punaisen vihreäksi */
+  transition: filter 0.5s ease-in-out; /* Pehmeä värimuutos */
+}
 
 
 
