--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,7 +214,7 @@ section {
   width: 50vw;
   height: 100vh;
   margin-left: 0rem;
-  
+  filter: drop-shadow(20px 20px 100px var(--color-secondary));
 }
 
 /* kuvan väri vihreäksi */
