--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,7 @@
 
 .light-mode {
   --color-primary: #000000;
-  --color-secondary: #f3931f;
+  --color-secondary: #3cff00;
   --color-white: #ffffff;
   --color-black: #ffffff;
   --color-grey0: #f8f8f8;
@@ -226,7 +226,7 @@ section {
 .name {
   font-family: "Bebas Neue", serif;
   font-weight: 100;
-  filter: drop-shadow(0px 0px 50px var(--color-secondary));
+  filter: drop-shadow(0px 10px 60px var(--color-secondary));
 }
 
 
@@ -236,6 +236,7 @@ section {
   transition: all 0.9s ease-in-out;
   background-color: var(--color-primary);
   width: 100%;
+  
 }
 
 
@@ -299,7 +300,7 @@ section {
   scale: 0.85;
   transition: ease-in-out;
   background-color: var(--color-secondary);
-  
+  filter: drop-shadow(0px 10px 60px var(--color-secondary));
 }
 
 .controls .active-btn {
@@ -316,6 +317,7 @@ section {
 .fa-sack-dollar:hover {
   animation: shake 0.5s;
   animation-iteration-count: infinite;
+  filter: drop-shadow(0px 10px 60px var(--color-secondary));
 }
 
 
@@ -370,11 +372,13 @@ section {
 .light-mode .theme-btn:hover {
   background-color: var(--color-orange-7);
   scale: 0.8;
+  filter: drop-shadow(0px 10px 60px var(--color-secondary));
 }
 
 .theme-btn:hover {
-  background-color: #f3931f;
+  background-color: #3cff00;
   scale: 0.8;
+  filter: drop-shadow(0px 10px 60px var(--color-secondary));
   
 }
 
@@ -408,20 +412,6 @@ section {
   animation: grayscaleBlink 1s infinite; /* 2s tarkoittaa sekuntia per sykli, infinite toistaa animaation jatkuvasti */
 }
 
-/* Animaation määrittely 
-@keyframes grayscaleBlink {
-  0% {
-    filter: grayscale(0%);  Normaaliväri 
-  }
-50% {
-    filter: grayscale(100%);  Harmaasävy 100% 
-  }
-  100% {
-    filter: grayscale(0%);  Takaisin normaaliväriin 
-  }
-} */
-
-
 
 .header-content .right-header {
   display: flex;
@@ -446,7 +436,7 @@ section {
   text-align: center;
 }
 
-/*About SKILLS EDU */
+/*About SKILLS EDU 
 
 .about-container .right-about .about-item:hover {
   cursor: default;
@@ -490,7 +480,7 @@ section {
   color: var(--color-grey-1);
 }
 
-
+*/
 
 :root {
   --items-per-page: 4;
@@ -500,6 +490,7 @@ section {
   width: 100%;
   overflow: hidden;
   position: relative;
+  filter: drop-shadow(0px 10px 60px var(--color-secondary));
 }
 
 
@@ -768,6 +759,7 @@ section {
   transform: scale(1.1);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.8);
 }
+
 .blogs .blog img {
   width: 100%;
   height: 10rem;
@@ -777,6 +769,7 @@ section {
   filter: grayscale(0%);
   transition: all 0.4s ease-in-out;
 }
+
 .blogs .blog .blog-text {
   margin-top: -7px;
   padding: 1.1rem;
@@ -811,6 +804,7 @@ section {
   display: flex;
   padding-top: 3.5rem;
 }
+
 .contact-content-con .left-contact {
   flex: 2;
 }
@@ -824,7 +818,6 @@ section {
   margin: 1rem 0;
   line-height: 2rem;
   font-size: smaller;
- 
 }
 
 .left-contact span {
@@ -838,25 +831,30 @@ section {
   align-items: left;
   justify-content: space-between;
 }
+
 .contact-content-con .left-contact .contact-info .contact-item p {
   margin: 0.3rem 0 !important;
   padding: 0 !important;
 }
+
 .contact-content-con .left-contact .contact-info .contact-item .icon {
   display: grid;
   grid-template-columns: 40px 1fr;
 }
+
 .contact-content-con .left-contact .contact-info .contact-item .icon i {
   display: flex;
   align-items: center;
   font-size: 1.3rem;
 }
+
 .contact-content-con .left-contact .contact-icon {
   display: flex;
   margin-top: 2rem;
   margin-bottom: 2rem;
   margin-left: 0rem;
 }
+
 .contact-content-con .left-contact .contact-icon a {
   display: flex;
   align-items: center;
@@ -875,22 +873,27 @@ section {
 .contact-content-con .left-contact .contact-icon a:hover {
   background-color: var(--color-secondary);
 }
+
 .contact-content-con .left-contact .contact-icon a:hover i {
   color: var(--color-primary);
 }
+
 .contact-content-con .left-contact .contact-icon a i {
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 1.3rem;
 }
+
 .contact-content-con .right-contact {
   flex: 3;
   margin-left: 3rem;
 }
+
 .contact-content-con .right-contact .input-control {
   margin: 1.5rem 0;
 }
+
 .contact-content-con .right-contact .input-control input, .contact-content-con .right-contact .input-control textarea {
   border-radius: 30px;
   font-weight: inherit;
@@ -904,12 +907,15 @@ section {
   color: var(--color-white);
   resize: none;
 }
+
 .contact-content-con .right-contact .i-c-2 {
   display: flex;
 }
+
 .contact-content-con .right-contact .i-c-2 :last-child {
   margin-left: 1.5rem;
 }
+
 .contact-content-con .right-contact .submit-btn {
   display: flex;
   justify-content: flex-start;
@@ -932,9 +938,11 @@ section {
   align-items: center;
   overflow: hidden;
 }
+
 .main-btn .btn-text {
   padding: 0 2rem;
 }
+
 .main-btn .btn-icon {
   background-color: var(--color-secondary);
   display: flex;
@@ -943,6 +951,7 @@ section {
   border-radius: 50%;
   padding: 1rem;
 }
+
 .main-btn::before {
   content: "";
   position: absolute;
@@ -952,9 +961,11 @@ section {
   transition: all 0.4s ease-out;
   z-index: -1;
 }
+
 .main-btn:hover {
   transition: all 0.4s ease-out;
 }
+
 .main-btn:hover::before {
   width: 100%;
   height: 100%;
@@ -965,7 +976,6 @@ section {
 
 .main-title {
   text-align: center;
-
 }
 
 /* OTSIKON MUOTOILU */
@@ -973,14 +983,12 @@ section {
   position: relative;
   text-transform: uppercase;
   font-size: 3rem;
-  font-weight: 700;
-  
+  font-weight: 700; 
 }
 
 .main-title h2 span {
   color: var(--color-secondary);
 }
-
 
 
 .main-title h2 .bg-text {
@@ -1010,6 +1018,7 @@ section {
 .imagePhone {
   margin-left: -10px;
   margin-top: 50px;
+  
 }
 
 
@@ -1020,8 +1029,8 @@ section {
   background-color: transparent;
   width: 225px;
   height: 360px;
-  
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  filter: drop-shadow(0px 10px 60px var(--color-secondary));
 }
 
 /* This container is needed to position the front and back side */
