--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
@@ -89,7 +88,7 @@ h2 {
   letter-spacing: 0.2rem;
 }
 
-/* Animaatiot */
+/* etusivun tekstin animaatiot */
 @keyframes bounceInDown {
   0% {
     opacity: 0;
@@ -147,9 +146,19 @@ section {
   height: 100vh;
   margin-left: 0rem;
   margin-bottom: 0rem;
-  /*filter: drop-shadow(5px 5px 100px var(--color-secondary)); */
+  animation: väriVaihto 5s infinite alternate;
+  filter: hue-rotate(0deg);
+
 }
 
+@keyframes väriVaihto {
+  from {
+    filter: hue-rotate(0deg);
+  }
+  to {
+    filter: hue-rotate(360deg);
+  }
+}
 
 #man {
   position: fixed;  
@@ -641,11 +650,13 @@ section {
   box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
   transition: all 0.4s ease-in-out;
 }
+
 .blogs .blog:hover {
   box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
   transform: translateY(-5px);
   transition: all 0.4s ease-in-out;
 }
+
 .blogs .blog:hover img {
   filter: grayscale(0);
   transform: scale(1.1);
