--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,7 +148,7 @@ section {
   margin-bottom: 0rem;
   /*animation: väriVaihto 6s infinite alternate;
   filter: hue-rotate(0deg); */
-
+  transition: filter 0.5s ease;
 }
 
 @keyframes väriVaihto {
