--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@
 
 :root {
   --color-primary: #000000;
-  --color-secondary: #ff1d48;
+  --color-secondary: #1dcaff;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
@@ -28,7 +28,7 @@
 
 .light-mode {
   --color-primary: #000000;
-  --color-secondary: #3cff00;
+  --color-secondary: #ffa600;
   --color-white: #ffffff;
   --color-black: #ffffff;
   --color-grey0: #f8f8f8;
@@ -38,7 +38,7 @@
   --color-grey-4: #454e56;
   --color-grey-5: #1f201f;
   --color-grey-6: #ffffff;
-  --color-orange-7: #ff1d48;
+  --color-orange-7: #1dcaff;
 }
 
 body {
@@ -323,7 +323,7 @@ section {
 }
 
 .theme-btn:hover {
-  background-color: #3cff00;
+  background-color: #ffa600;
   scale: 0.8;
   filter: drop-shadow(0px 10px 60px var(--color-secondary));
 }
@@ -967,14 +967,11 @@ section {
 
 /* Style the back side */
 .flip-card-back {
-  position: relative;
-  font-weight:bolder;
-  border: 1px solid rgb(0, 0, 0);
-  border-radius: 12px;
-  top: 19%;
+  position: relative; 
+  top: 10%;
   width: 100%;
   height: 100%;
-  background-color: #000000;
+  background-color: transparent;
   color: rgb(0, 0, 0);
   transform: rotateY(180deg);
   
