--- a/styles/styles.css
+++ b/styles/styles.css
@@ -408,11 +408,11 @@ section {
   min-width: calc(100% / var(--items-per-page));
   box-sizing: border-box;
   text-align: center;
-  margin-bottom: 0.1rem;   
+  margin-bottom: 0.05rem;   
 }
 
 .carousel-item img {
-  width: 6rem; /* Aseta leveys suhteessa containeriin */
+  width: 4.5rem; /* Aseta leveys suhteessa containeriin */
   height: auto; /* Korkeus skaalautuu automaattisesti */
   object-fit: contain;
 }
@@ -488,12 +488,12 @@ section {
   text-transform: uppercase;
   font-size:small;
   font-weight: 500;
-  height: 4.5rem;
+  height: 4rem;
 }
 .timeline .timeline-item h5 span {
   color: var(--color-grey-2);
   font-weight: 400;
-  font-size:x-small;
+  font-size:smaller;
   
 }
 
