--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@
 }
 
 :root {
-  --color-primary: #000101;
+  --color-primary: #19058a;
   --color-secondary: #1dcaff;
   --color-white: #FFFFFF;
   --color-black: #000;
