--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@
 
 :root {
   --color-primary: #050d20;
-  --color-secondary: #17ecea;
+  --color-secondary: #e23838;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
@@ -28,7 +28,7 @@
 
 .light-mode {
   --color-primary: #050d20;
-  --color-secondary: #e23838;
+  --color-secondary: #17ec77;
   --color-white: #ffffff;
   --color-black: #ffffff;
   --color-grey0: #f8f8f8;
@@ -38,7 +38,7 @@
   --color-grey-4: #454e56;
   --color-grey-5: #1f201f;
   --color-grey-6: #ffffff;
-  --color-orange-7: #17ecea;
+  --color-orange-7: #e23838;
 }
 
 body {
@@ -323,7 +323,7 @@ section {
 }
 
 .theme-btn:hover {
-  background-color: #e23838;
+  background-color: #17ec77;
   scale: 0.8;
   filter: drop-shadow(0px 10px 60px var(--color-secondary));
 }
