--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,6 +41,14 @@
   --color-orange-7: #e23838;
 }
 
+/* Hide the scrollbar for Chrome, Safari and Opera */
+.main-content::-webkit-scrollbar {
+  display: none;
+}
+
+
+
+
 body {
   background-color: var(--color-primary);
   font-family: "Roboto", sans-serif;
@@ -52,7 +60,10 @@ body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   height: 100%; 
+  
 }
+
+
 
 h2 {
   font-family: "Bebas Neue", serif;
