--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  scrollbar-width: none;
 }
 
 :root {
@@ -41,12 +42,6 @@
   --color-orange-7: #e23838;
 }
 
-/* Hide the scrollbar for Chrome, Safari and Opera */
-.main-content::-webkit-scrollbar {
-  display: none;
-}
-
-
 
 
 body {
@@ -60,7 +55,6 @@ body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   height: 100%; 
-  
 }
 
 
