--- a/styles/styles.css
+++ b/styles/styles.css
@@ -577,7 +577,7 @@ section {
 
 .portfolios .portfolio-item img {
   width: 100%;
-  height: 10rem;
+  height: 8rem;
   object-fit: cover;
   border-radius: 5px;
   border-bottom: var(--color-secondary)solid 0.4rem;
@@ -1422,7 +1422,7 @@ section {
   }
 
   .portfolios {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
   }
 
   .header-content .right-header {
@@ -1573,12 +1573,14 @@ section {
     grid-template-columns: repeat(1, 1fr);
     padding-bottom: 6rem;
     margin-top: 1rem;
+    object-fit: cover;
   }
 
   .blogs {
     grid-template-columns: repeat(1, 1fr);
     padding-bottom: 6rem;
     margin-top: 1rem;
+    object-fit: cover;
     
   }
 
