--- a/styles/styles.css
+++ b/styles/styles.css
@@ -397,7 +397,8 @@ section {
   min-width: calc(100% / var(--items-per-page));
   box-sizing: border-box;
   text-align: center;
-  margin-bottom: 0.05rem;  
+  
+  
 }
 
 .carousel-item img {
@@ -405,16 +406,19 @@ section {
   height: auto; /* Korkeus skaalautuu automaattisesti */
   object-fit: contain;
   border-radius: 10%;
+  
 }
 
 
 .stat-title { 
-  font-size: 1.5em;
+  font-size: 1.1em;
   font-weight: 400;
-  letter-spacing: -0.1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
   align-content: center;
   text-align: center;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
   padding: 2rem 0;
   position: relative;
 }
