--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
 
 :root {
   --color-primary: #111308;
-  --color-secondary: #3d81b2;
+  --color-secondary: #08c0f8;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
@@ -29,7 +29,7 @@
 
 .light-mode {
   --color-primary: #111308;
-  --color-secondary: #17ec77;
+  --color-secondary: #8c17ec;
   --color-white: #ffffff;
   --color-black: #ffffff;
   --color-grey0: #f8f8f8;
@@ -39,7 +39,7 @@
   --color-grey-4: #454e56;
   --color-grey-5: #1f201f;
   --color-grey-6: #ffffff;
-  --color-orange-7: #3d81b2;
+  --color-orange-7: #08c0f8;
 }
 
 
@@ -312,7 +312,7 @@ section {
 }
 
 .theme-btn:hover {
-  background-color: #17ec77;
+  background-color: #8c17ec;
   scale: 0.8;
   filter: drop-shadow(0px 10px 60px var(--color-secondary));
 }
@@ -442,8 +442,7 @@ section {
 }
 
 .timeline, h5 {
-  height: 4.5em;
-  
+  height: 4.5em; 
 }
 
 
@@ -465,6 +464,7 @@ section {
   align-items: center;
   justify-content: center;
 }
+
 .timeline .timeline-item .tl-icon i {
   font-size: 1rem;
 }
