--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,4 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 
 
 * {
@@ -155,9 +153,14 @@ section {
   height: 100vh;
   margin-left: 0rem;
   margin-bottom: 0rem;
-  transition: filter 0.5s ease;
+  transition: transform 1s ease-out;
 }
 
+#image:hover {
+  transform: scale(0.9);
+  transition: transform 1s ease-in;
+  
+}
 
 
 /* ETUSIVUN NIMI TYYLI */
@@ -1107,10 +1110,9 @@ section {
   }
 
   .left-header {
-    margin-right: -4rem;
-    margin-left: -4rem;
-    margin-bottom: -3rem;
-    
+    margin-right: 0rem;
+    margin-left: 0rem;
+    margin-bottom: -3rem; 
   }
 
   .header-content {
