--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,11 +60,10 @@ body {
 
 
 
-h2 {
-  font-family: "Bebas Neue", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  letter-spacing: 0.1cap;
+h2 { 
+  font-family: "Bebas Neue", serif;
+  font-weight: 100;
+  letter-spacing: 0.05cap;
 }
 
 
@@ -75,7 +74,7 @@ h2 {
 }
 
 .text {
-  font-size: 1.7em;
+  font-size: 1.5em;
   font-weight: 400;
   letter-spacing: -0.1rem;
   align-content: center;
