--- a/styles/styles.css
+++ b/styles/styles.css
@@ -782,11 +782,11 @@ section {
 .contact-content-con .left-contact p {
   margin: 1rem 0;
   line-height: 2rem;
-  font-size: smaller;
+  font-size: x-small;
 }
 
 .left-contact span {
-  font-size: smaller;
+  font-size: x-small;
   text-transform: uppercase;
   margin-top: 0.2rem;
 }
@@ -1487,13 +1487,7 @@ section {
     margin-top: 2rem;
   }
 
-  .imagePhone {
-    display: none;
-  }
-
-  .flip-card {
-    display: none;
-  }
+ 
 
   .about-container {
     grid-template-columns: repeat(1, 1fr);
