--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1487,8 +1487,15 @@ section {
     margin-top: 2rem;
   }
 
- 
+/*
+  .imagePhone {
+    display: none;
+  }
 
+  .flip-card {
+    display: none;
+  }
+*/
   .about-container {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -1577,7 +1584,7 @@ section {
   }
 
   
-  
+/*
   .imagePhone {
     display: none;
   }
@@ -1585,7 +1592,7 @@ section {
   .flip-card {
     display: none;
   }
-
+*/
   .main-title h2 {
     font-size: 4rem;
   }
