--- a/styles/styles.css
+++ b/styles/styles.css
@@ -601,14 +601,17 @@ section {
   width: 100%;
   height: auto;
   object-fit: cover;
-  border-radius: 5px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+  border-bottom-left-radius: 50px;
+  border-bottom-right-radius: 50px;
   transition: transform 0.5s ease-in-out;
   border-bottom: 0.4rem solid var(--color-secondary);
 }
 
 /* Zoom effect */
 .timeline .timeline-item img:hover {
-  transform: scale(0.95);
+  transform: scale(1.2);
   -webkit-animation: flash 2s;
 	animation: flash 2s;
 }
@@ -640,7 +643,7 @@ section {
 .portfolios {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-gap: 0.6rem;
+  grid-gap: 0.8rem;
   margin-top: 2rem;
 }
 
@@ -655,8 +658,10 @@ section {
 .portfolios .portfolio-item img {
   width: 100%;
   height: 8rem;
-  object-fit:inherit;
-  border-radius: 5px;
+  object-fit: cover;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
   border-bottom: var(--color-secondary)solid 0.4rem;
 }
 
@@ -667,7 +672,9 @@ section {
   position: absolute;
   left: 0;
   top: 0;
-  border-radius: 5px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -733,7 +740,8 @@ section {
 .blogs .blog {
   position: relative;
   background-color: var(--color-grey-5);
-  border-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
   transition: all 0.4s ease-in-out;
 }
@@ -754,7 +762,7 @@ section {
   width: 100%;
   height: 7rem;
   object-fit: cover;
-  border-top-left-radius: 5px;
+  border-top-left-radius: 50px;
   border-top-right-radius: 5px;
   filter: grayscale(0%);
   transition: all 0.4s ease-in-out;
@@ -763,6 +771,7 @@ section {
 .blogs .blog .blog-text {
   margin-top: -7px;
   padding: 1.1rem;
+  border-top-left-radius: 50px;
   border-top: 0.5rem solid var(--color-secondary);
   height: 8rem;
 }
