--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1544,6 +1544,8 @@ section {
   .blog img {
   width: 100%;
   object-fit: cover;
+  display: flex; /* Voi auttaa sisällön tasaamisessa */
+  flex-direction: column;
   }
 
   .blogs {
