--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1546,14 +1546,17 @@ section {
   object-fit: cover;
   display: flex; /* Voi auttaa sisällön tasaamisessa */
   flex-direction: column;
-  margin: 0 auto;
   }
 
   .blogs {
     grid-template-columns: repeat(4, 1fr);
     padding-bottom: 6rem;
     margin-top: 2rem;
-    margin: 0 auto;
+  }
+
+  .blog-text {
+    width: 100%;
+    object-fit: cover;
   }
 
 /*
