--- a/styles/styles.css
+++ b/styles/styles.css
@@ -652,17 +652,15 @@ section {
 }
 
 
-
-
 .portfolios .portfolio-item {
   position: relative;
-  border-radius: 5px;
-  margin-bottom: 1rem;
+  border-radius: 10px;
+  border-width: 0.5rem;
 }
 
 .portfolios .portfolio-item img {
   width: 100%;
-  height: 8rem;
+  height: 7rem;
   object-fit: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -751,8 +749,7 @@ section {
   border-top-right-radius: 10px;
   position: relative;
   background-color: var(--color-grey-5);
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-width: 0.5rem;
   box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
   transition: all 0.4s ease-in-out;
 }
@@ -765,7 +762,6 @@ section {
 }
 
 .blogs .blog:hover img {
-  filter: grayscale(0);
   transform: scale(1.1);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.8);
 }
@@ -778,9 +774,8 @@ section {
   border-top-right-radius: 10px;
   border-style: double;
   border-width: 0.5rem;
-  filter: grayscale(0%);
-  transition: all 0.4s ease-in-out;
-  
+  transition: all 0.4s ease-in-out; 
+  border-bottom: var(--color-secondary)solid 0.4rem;
 }
 
 .blog-text {
@@ -791,7 +786,6 @@ section {
   background-color: #000000;
   margin-top: -7px;
   padding: 1.1rem;
-  border-top: 0.5rem solid var(--color-secondary);
   height: 8rem;
 }
 
